--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>TouhinTechnical Portfolio</title>
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- css link -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="main-header">
+            <div class="left-side-h">
+                <div class="heading-title">
+                    <h1>Welcome to</h1>
+                    <h2>Touhin Technical World</h2>
+                </div>
+                <div class="content-text">
+                    <h3 class="content-title">Build Climber and Train Stopper</h3>
+                    <p class="content-para">You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+                    <a href="#" class="btn btn-content">hire me</a>
+                </div>
+            </div>
+            <div class="right-side-h"></div>
+        </div>
+    </header>
 </body>
 </html>
