portfolio all set

--- a/index.html
+++ b/index.html
@@ -13,21 +13,70 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div class="main-header">
-            <div class="left-side-h">
-                <div class="heading-title">
-                    <h1>Welcome to</h1>
-                    <h2>Touhin Technical World</h2>
+    <header class="bg-banner-h h-500 pb-150 clearfix">
+        <div class="container">
+            <div class="main-header pt-30 clearfix">
+                <div class="left-side-h">
+                    <div class="heading-title">
+                        <h1>Welcome to</h1>
+                        <h2><span>Touhin Technical</span> World</h2>
+                    </div>
+                    <div class="content-text">
+                        <h3 class="content-title">Build Climber and Train Stopper</h3>
+                        <p class="content-para">You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+                        <a href="#" class="btn btn-content">hire me</a>
+                    </div>
                 </div>
-                <div class="content-text">
-                    <h3 class="content-title">Build Climber and Train Stopper</h3>
-                    <p class="content-para">You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-                    <a href="#" class="btn btn-content">hire me</a>
+                <div class="right-side-h">
+                    <div class="right-img">
+                        <img src="img/Touhin-bg.png" alt="Touhin">
+                    </div>
                 </div>
             </div>
-            <div class="right-side-h"></div>
         </div>
     </header>
+    <section class="about-section bg-banner-a h-500 pb-150">
+        <div class="container">
+            <div class="main-about">
+                <div class="left-side-h about-left">
+                    <div class="right-img">
+                        <img src="img/my-bg2.png" alt="Touhin">
+                    </div>
+                </div>
+                <div class="right-side-h about-right">
+                    <div class="heading-title">
+                        <h1>Dream Big</h1>
+                    </div>
+                    <div class="content-text">
+                        <h3 class="content-title">Become a web developer</h3>
+                        <p class="content-para f-size">I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+                        <a href="#" class="btn btn-content">download resume</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="servive-section bg-banner-ser h-500">
+        <div class="container">
+            <div class="main-service clearfix">
+                <h2 class="ser-title">Experiences</h2>
+                <div class="service-content clearfix">
+                    <div class="leftSide-content" id="full-stack">
+                        <h2 class="ser-content-h">full stack web developer</h2>
+                        <h4 class="ser-content-subTitle">2021- Present | pro level developer</h4>
+                        <p class="ser-content-para">I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                    </div>
+                    <div class="rightSide-content" id="baby-stack">
+                        <h2 class="ser-content-h">full stack web developer</h2>
+                        <h4 class="ser-content-subTitle">2021- Present | pro level developer</h4>
+                        <p class="ser-content-para">I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p class="footer-text">© Touhin Technical 2022, a Programming Hero initiative.</p>
+    </footer>
 </body>
 </html>
