index file simple change

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     </section>
     <section class="servive-section bg-banner-ser h-500">
         <div class="container">
-            <div class="main-service clearfix">
+            <div class="main-service">
                 <h2 class="ser-title">Experiences</h2>
-                <div class="service-content clearfix">
+                <div class="service-content">
                     <div class="leftSide-content" id="full-stack">
                         <h2 class="ser-content-h">full stack web developer</h2>
                         <h4 class="ser-content-subTitle">2021- Present | pro level developer</h4>
