--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="main-about">
                 <div class="left-side-h about-left">
                     <div class="right-img">
-                        <img src="img/my-bg2.png" alt="Touhin">
+                        <img src="img/about-touhin-bg.png" alt="Touhin">
                     </div>
                 </div>
                 <div class="right-side-h about-right">
@@ -56,7 +56,7 @@
             </div>
         </div>
     </section>
-    <section class="servive-section bg-banner-ser h-500">
+    <section class="servive-section bg-banner-ser pb-150 h-500">
         <div class="container">
             <div class="main-service">
                 <h2 class="ser-title">Experiences</h2>
@@ -67,9 +67,9 @@
                         <p class="ser-content-para">I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
                     </div>
                     <div class="rightSide-content" id="baby-stack">
-                        <h2 class="ser-content-h">full stack web developer</h2>
-                        <h4 class="ser-content-subTitle">2021- Present | pro level developer</h4>
-                        <p class="ser-content-para">I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                        <h2 class="ser-content-h">Baby Web Developer</h2>
+                        <h4 class="ser-content-subTitle">2020-2021 | Programming Hero Learner</h4>
+                        <p class="ser-content-para">They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
                     </div>
                 </div>
             </div>
